--- a/requirements.txt
+++ b/requirements.txt
@@ -5,26 +5,12 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.9
 Flask==0.12.2
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-requests==2.18.4
-selenium==3.8.0
-urllib3==1.22
-Werkzeug==0.13
-beautifulsoup4==4.6.0
-bs4==0.0.1
-certifi==2017.11.5
-chardet==3.0.4
-click==6.7
-colorama==0.3.9
-Flask==0.12.2
 gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+redis==2.10.6
 requests==2.18.4
 selenium==3.8.0
 urllib3==1.22
