--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
+python-dotenv==0.8.2
 redis==2.10.6
 requests==2.18.4
 selenium==3.8.0
