--- a/requirements.txt
+++ b/requirements.txt
@@ -5,48 +5,6 @@ chardet==3.0.4
 click==6.7
 colorama==0.3.9
 Flask==0.12.2
-gunicorn==19.7.1
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-python-dotenv==0.8.2
-redis==2.10.6
-requests==2.18.4
-selenium==3.8.0
-urllib3==1.22
-Werkzeug==0.13
-beautifulsoup4==4.6.0
-bs4==0.0.1
-certifi==2017.11.5
-chardet==3.0.4
-click==6.7
-colorama==0.3.9
-Flask==0.12.2
-gunicorn==19.7.1
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-pbr==4.0.2
-python-dotenv==0.8.2
-pytz==2018.4
-redis==2.10.6
-requests==2.18.4
-selenium==3.8.0
-six==1.11.0
-stevedore==1.28.0
-urllib3==1.22
-virtualenv==15.2.0
-virtualenv-clone==0.3.0
-Werkzeug==0.13
-beautifulsoup4==4.6.0
-bs4==0.0.1
-certifi==2017.11.5
-chardet==3.0.4
-click==6.7
-colorama==0.3.9
-Flask==0.12.2
 graphviz==0.8.3
 gunicorn==19.7.1
 idna==2.6
@@ -57,6 +15,7 @@ memory-profiler==0.52.0
 objgraph==3.4.0
 pbr==4.0.2
 psutil==5.4.5
+Pympler==0.5
 python-dotenv==0.8.2
 pytz==2018.4
 redis==2.10.6
